# dippy-studio-bittensor-orchestrator

./: .env.example  .gitignore  README.md  docker-compose-db.yml  docker-compose-dev.yml  docker-compose-integration.yml  docker-compose-local.yml  docker-compose-prod.yml  forwarder.Dockerfile  justfile  orchestrator.Dockerfile  pyproject.toml  pytest.ini  requirements.forwarder.txt  requirements.orchestrator.txt
.github/workflows/: orchestrator-build.yml
2025_NOV_1_REPORT/: check_gcs_images.py  flag_missing_image_miners.py  generate_missing_images_summary.py  hashed_preview.jsonl  image_analysis.md  jobs_oct27_nov1_prompt_hashed.parquet  missing_images_by_miner.csv
charts/jobrelay/: Chart.yaml  values.yaml
charts/orchestrator/: Chart.yaml  values.yaml
database/: Dockerfile  atlas.hcl
database/migrations/: 20251018_220200_create_miners.sql  20251020_000000_merge_scores_into_miners.sql  atlas.sum  (+1 more)
dev_scaffolding/: stub_miner_server.py
epistula/: epistula.py
forwarder/: __init__.py  app.py  server.py
functional_tests/: client.py  conftest.py  test_health.py  test_jobrelay_e2e.py
jobrelay/: Dockerfile  __init__.py  app.py  background.py  cli.py  config.py  duckdb_manager.py  main.py  models.py  postgres_manager.py  repository.py  requirements.jobrelay.txt
orchestrator/: __init__.py  config.example.yaml  config.py  config.yaml  dependencies.py  litestream.yml  orchestrator.dev.Dockerfile  routes.py  server.py
scripts/: analyze_missing_images.py  run_metagraph_loop.sh  run_score_etl_loop.sh
sn_uuid/: __init__.py
ss58_service/: Dockerfile  spec.md
(+94 files in other folders)
