[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sn11"
version = "0.0.1"
authors = [
  { name="donald knoller", email="dknoller@fastmail.com" },
]
description = "SN11 Subnet Orchestrator"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["optional-dependencies"]
dependencies = [
    "pydantic>=2.12.3",
]

[project.urls]
"Homepage" = "https://dippy.ai"
"Bug Tracker" = "https://github.com/impel-intelligence/dippy-studio-bittensor-orchestrator/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic.optional-dependencies]
orchestrator = {file = ["requirements.orchestrator.txt"]}
